--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,7 @@
+name = "CF-Worker-BestIP-collector"
+main = "_workers.js"
+compatibility_date = "2024-12-01"
+
 [[kv_namespaces]]
 binding = "IP_STORAGE"
 id = "6bfa98adedb44108885132cb0e2dabc3"
